remove samples add an empty Layer model

--- a/MapSignalR/MapSignalR.csproj
+++ b/MapSignalR/MapSignalR.csproj
@@ -61,8 +61,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Layer.cs" />
     <Compile Include="MapHub.cs" />
-    <Compile Include="MyHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
