add same functionality to windows phone, which will not render cesium in emulator apparently

--- a/ControlSurface/ControlSurface.WindowsPhone/ControlSurface.WindowsPhone.csproj
+++ b/ControlSurface/ControlSurface.WindowsPhone/ControlSurface.WindowsPhone.csproj
@@ -124,6 +124,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\MapSignalR\MapSignalR.csproj">
+      <Project>{dd67cc30-a209-449c-9946-7a428e6e471d}</Project>
+      <Name>MapSignalR</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
